tests/test_exception/good/split_unlabeled_exception.catala_en
## Test

```catala
declaration scope A:
  context output x content integer

scope A:
  definition x equals 0
```

```catala
scope A:
  exception
  definition x equals 1
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
